// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearCitationView test  should render component with date in TZ format 1`] = `
<YearCitationView
  date="2017-07-01T00:00:00Z"
>
  <span
    className="citationYear"
  >
    (
    2017
    ).
  </span>
</YearCitationView>
`;

exports[`YearCitationView test  should render component with date invalid date format 1`] = `
<YearCitationView
  date="BLA BLA BLA"
>
  <span
    className="citationYear empty"
  />
</YearCitationView>
`;

exports[`YearCitationView test  should render component with date not in TZ format 1`] = `
<YearCitationView
  date="2010-08-01 00:00:00"
>
  <span
    className="citationYear"
  >
    (
    2010
    ).
  </span>
</YearCitationView>
`;

exports[`YearCitationView test  should render component with no date 1`] = `
<YearCitationView>
  <span
    className="citationYear empty"
  />
</YearCitationView>
`;
